force-app/main/default/objects/DBM_Event__e.object
<CustomObject>
    <description>Platform event used by Dashboard Magic to communicate across Apex and LWCs upon the asynchronous completion of the report metadata generation.</description>
    <fields>
        <fullName>Is_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Report_Details_Record_ID__c</fullName>
        <label>Report Details Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_ID__c</fullName>
        <label>Report ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>DBM Event</label>
    <pluralLabel>DBM Events</pluralLabel>
</CustomObject>